--- a/assets/style.css
+++ b/assets/style.css
@@ -52,7 +52,7 @@ iframe {
 
 /* background for page 1*/
 #cocktails {
-  background: url("/assets/Images/1976957.jpg") center / cover;
+  background: url("../assets/Images/1976957.jpg") center / cover;
 
 }
 
@@ -122,7 +122,7 @@ iframe {
 
 /* background for pages 2, 4 */
 #image2 {
-  background: url("assets/images/8.jpg") center / cover;
+  background: url("../assets/Images/8.jpg") center / cover;
 }
 
 
